ubiquity (2.10.5) UNRELEASED; urgency=low

  * Exit early from ubiquity_webcam_play and ubiquity_webcam_stop if priv or
    priv->camerabin is NULL.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 28 Mar 2012 11:40:47 +0100

ubiquity (2.10.4) precise; urgency=low

  [ Colin Watson ]
  * Add a log entry before running each target-config hook, to make it a bit
    more feasible to debug hangs there.
  * Call check-language-support with locale names, not with language pack
    names (LP: #963460).

  [ Stéphane Graber ]
  * Change the calls in calculate_result to use the same code path as the
    regular UI. (LP: #964472)
  * Actually call detect_bogus_result() in ubi-usersetup
  * Similarly to ubi-console-setup, don't setup any timeout or similar
    background tasks when running in automatic mode. (LP: #950282)

 -- Stéphane Graber <stgraber@ubuntu.com>  Tue, 27 Mar 2012 17:08:29 -0400

ubiquity (2.10.3) precise-proposed; urgency=low

  * Move oem-config-udeb's menu item before that of user-setup's, which
    moved to 2400 in user-setup 1.30.
  * Don't remove cryptsetup if there are any uncommented entries in
    /etc/crypttab (LP: #893548).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 26 Mar 2012 16:57:40 +0100

ubiquity (2.10.2) precise; urgency=low

  [ Colin Watson ]
  * Fix test_misc.GrubDefaultTests.test_avoid_cdrom.
  * Invert the set of locale categories set in case of a language/location
    conflict, so we now set LC_NUMERIC, LC_TIME, LC_MONETARY, LC_PAPER,
    LC_NAME, LC_ADDRESS, LC_TELEPHONE, LC_MEASUREMENT, and LC_IDENTIFICATION
    instead (LP: #926207).
  * Automatic update of included source packages: localechooser 2.39ubuntu2.

  [ Brian Murray ]
  * UTF-8-encode debug messages which are written to stderr (LP: #960278)

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 23 Mar 2012 18:00:36 +0000

ubiquity (2.10.1) precise; urgency=low

  * ubiquity.misc.boot_device needs root privileges in order to talk to
    parted_server.